--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Simple game of Rock-Paper-Scissors",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass --watch src/sass:dist/css",
-    "tsc": "tsc -w"
+    "build": "webpack",
+    "dev": "webpack serve",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/The-sad-philosopher/rock-paper-scissors/issues"
   },
-  "homepage": "https://github.com/The-sad-philosopher/rock-paper-scissors#readme"
+  "homepage": "https://github.com/The-sad-philosopher/rock-paper-scissors#readme",
+  "devDependencies": {
+    "ts-loader": "^8.0.11",
+    "typescript": "^4.1.2",
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
+  }
 }
