--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "shortid": "^2.2.16"
   }
 }
